--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   </head>
   <body>
+    <header class="logo-container">
+      <img src="https://i.postimg.cc/2bTNcq6H/logo.png" alt="Rialo Logo" width="120">
+      <h1>🎮 Rialo Squid Game</h1>
+    </header>
     <script src="src/main.js" type="module">
     </script>
     <section id="loading-screen">
@@ -48,8 +52,8 @@
         <div class="rect5"></div>
       </div>
     </section>
-    <section id="intro">
-      <img src="./static/resources/logo.png">
+   <section id="intro">
+      <img src="./static/resources/logo.png" alt="Game Logo">
       <button id="start">Click to Play</button>
     </section>
     <div class="timer">
